# level4-cv-finalproject-hackathon-cv-04-lv3

./: .env.example  .gitignore  .gitmodules  README.md  clova_speech.py  cosyvoice_api.py  crud.py  db_batch_processing.py  faiss.py  faiss_api.py  main.py  preprocessing.py  prompt.py  pyproject.toml  rag_main.py  stt_api.py  stt_test.ipynb  video_retalking_api.py
Emotion/: __init__.py  download_model.py  emotion_recognition.py
STT/: __init__.py  clova_speech.py
TTS/: TTS.py  __init__.py  clova_speech.py  processing.py
airflow/: airflow.cfg.example  airflow_init.md  airflow_init.sh
airflow/dags/: vector_db_update.py
api_benchmark/: __init__.py  cosyvioce_BM.py  locustfile_cosyvoice.py  logger.py
database/: __init__.py  crud.py  faiss_client.py  schemas.py
prompts/: extract_rss_content_prompt.md  extract_rss_content_prompt.py  main_prompt1.md  prompt.py  rag_prompt2.md  rag_prompt3.md  test1.md
rag/: __init__.py  db_manager.py  embedding.py  faiss_client.py  llm.py  retrieval.py  schemas.py  text_splitter.py  vector_store.py
reward_systems/app/: app.py  config.py
reward_systems/app/models/: ensemble.py  predict_sentiment.py
reward_systems/app/routes/: predictor.py
reward_systems/app/schemas/: request.py
reward_systems/data/: create_data.py  create_data_solar.py
reward_systems/ensemble/: alpha_sweep.py  dataset.py  sweep.py  weighted_ensemble.py  weighted_score.py
reward_systems/reward/: config.yaml
reward_systems/reward/model/: data_loader.py  inference.py  train.py
reward_systems/reward/model/utils/: optimization.py  trainer.py
reward_systems/sentiment/model/: inference.py  train.py
reward_systems/toxigen/: inference.py
utils/: __init__.py  embedding.py  llm.py  post_processing.py  processing.py
vue/video-filter/: README.md  package-lock.json  package.json
vue/video-filter/public/: index.html
vue/video-filter/src/: App.vue
vue/video-filter/src/components/: LoadingOverlay.vue  RevisedScript.vue  Script.vue  Video.vue
vue/video-filter/src/utils/: api.js  apiConfig.js  solar.js  stt.js
