[project]
name = "hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Seyeon Kim",email = "ksyrobot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "langchain-upstage (>=0.6.0,<0.7.0)",
    "langchain-core (>=0.3.30,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
